--- a/frontend/src/components/AddToList/AddToList.css
+++ b/frontend/src/components/AddToList/AddToList.css
@@ -1,6 +1,6 @@
 .add__page {
   max-width: 600px;
-  padding: 50px 0;
+  padding: 4rem 0;
   margin: 0 auto;
 }
 
@@ -8,9 +8,8 @@
   box-sizing: border-box;
   border: 2px solid #ccc;
   border-radius: 4px;
-  font-size: 16px;
   background-color: white;
-  padding: 12px 20px 12px 40px;
+  padding: 12px 20px 12px 20px;
   width: 100%;
   background-color: darkslategrey;
   color: white;
