--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -10,13 +10,14 @@
 }
 
 .navbar__logo {
-  color: #000;
-  justify-self: flex-start;
+  position: absolute;
+  left: 0;
+  color: #f4f4f4;
   cursor: pointer;
   font-size: 1.5rem;
   display: flex;
   align-items: center;
-  margin-left: 24px;
+  margin-left: 40px;
   font-weight: bold;
   text-decoration: none;
 }
@@ -25,7 +26,6 @@
   display: flex;
   list-style: none;
   align-items: center;
-
   height: 100%;
   cursor: pointer;
 }
@@ -50,4 +50,23 @@
   display: flex;
   align-items: center;
   padding: 0 10px;
+}
+
+.button {
+  position: absolute;
+  right: 0;
+  margin-right: 40px;
+  background-color: #4eb5f1;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  text-transform: uppercase;
+  border-radius: 8px;
+  box-sizing: border-box;
+  font-size: 1.2rem;
+  transition: all 0.2s;
+}
+
+.button:hover {
+  background-color: #4095c6;
 }
