Minor UI update and routing
- Changed adding to different lists so it now works correctly
- Added search functionality on main page but need to style it correctly

--- a/frontend/src/components/AddToList/SearchCard.css
+++ b/frontend/src/components/AddToList/SearchCard.css
@@ -1,10 +1,10 @@
-.card {
+.search__card {
   display: flex;
-  padding: 4rem 0;
+  padding: 2rem 0;
   margin: 0 auto;
 }
 
-.card .poster img {
+.search__card .poster img {
   background-color: #916279;
   width: 100px;
   height: 120px;
